# weighted-dwd

./: README.md  pyproject.toml  setup.py
doc/example_notebooks/: 2D visualization.ipynb  Basic functionality.ipynb
doc/figures/: make_figures.py
wdwd/: __init__.py  dwd.py  gen_dwd.py  gen_kern_dwd.py  kern_md.py  svm.py  wdwd.py
